<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>YolcuListesi</class>
 <widget class="QWidget" name="YolcuListesi">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>751</width>
    <height>456</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <item row="0" column="0">
    <layout class="QHBoxLayout" name="horizontalLayout">
     <item>
      <widget class="QGroupBox" name="grpArama">
       <property name="title">
        <string>Alan seçimi</string>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <widget class="QRadioButton" name="rbYolcuAd">
          <property name="text">
           <string>Ad</string>
          </property>
          <property name="checked">
           <bool>true</bool>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="rbYolcuSoyad">
          <property name="text">
           <string>Soyad</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="rbYolcuYas">
          <property name="text">
           <string>Yaş</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="rbYolcuHes">
          <property name="text">
           <string>HES Kodu</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QRadioButton" name="rbYolcuTC">
          <property name="text">
           <string>TC Kimlik NO</string>
          </property>
         </widget>
        </item>
       </layout>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox">
       <property name="autoFillBackground">
        <bool>false</bool>
       </property>
       <property name="title">
        <string>Arama Türü</string>
       </property>
       <widget class="QRadioButton" name="rbBiten">
        <property name="geometry">
         <rect>
          <x>10</x>
          <y>60</y>
          <width>89</width>
          <height>20</height>
         </rect>
        </property>
        <property name="text">
         <string>ile biten</string>
        </property>
       </widget>
       <widget class="QRadioButton" name="rbIceren">
        <property name="geometry">
         <rect>
          <x>10</x>
          <y>90</y>
          <width>111</width>
          <height>20</height>
         </rect>
        </property>
        <property name="text">
         <string>içeren</string>
        </property>
       </widget>
       <widget class="QRadioButton" name="rbBaslayan">
        <property name="geometry">
         <rect>
          <x>10</x>
          <y>30</y>
          <width>89</width>
          <height>20</height>
         </rect>
        </property>
        <property name="text">
         <string>ile başlayan</string>
        </property>
        <property name="checked">
         <bool>true</bool>
        </property>
       </widget>
      </widget>
     </item>
     <item>
      <widget class="QGroupBox" name="groupBox_2">
       <property name="title">
        <string>Kriter</string>
       </property>
       <widget class="QLabel" name="label">
        <property name="geometry">
         <rect>
          <x>10</x>
          <y>30</y>
          <width>111</width>
          <height>21</height>
         </rect>
        </property>
        <property name="text">
         <string>Arama Metni</string>
        </property>
       </widget>
       <widget class="QLineEdit" name="leAranan">
        <property name="geometry">
         <rect>
          <x>10</x>
          <y>70</y>
          <width>211</width>
          <height>22</height>
         </rect>
        </property>
       </widget>
       <widget class="QPushButton" name="btnAra">
        <property name="geometry">
         <rect>
          <x>10</x>
          <y>100</y>
          <width>211</width>
          <height>24</height>
         </rect>
        </property>
        <property name="text">
         <string>Ara</string>
        </property>
       </widget>
      </widget>
     </item>
    </layout>
   </item>
   <item row="1" column="0">
    <widget class="QTableWidget" name="tblYolcular"/>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections>
  <connection>
   <sender>leAranan</sender>
   <signal>textChanged(QString)</signal>
   <receiver>btnAra</receiver>
   <slot>click()</slot>
   <hints>
    <hint type="sourcelabel">
     <x>555</x>
     <y>88</y>
    </hint>
    <hint type="destinationlabel">
     <x>541</x>
     <y>120</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
